--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -14,17 +14,25 @@
         <Button Name="calculateButton" Content="_Calculate" HorizontalAlignment="Left" Height="37" Margin="327,152,0,0" VerticalAlignment="Top" Width="122" Click="calculateButton_Click"/>
         <Button Name="clearButton" Content="C_lear" HorizontalAlignment="Left" Height="34" Margin="327,209,0,0" VerticalAlignment="Top" Width="122" Click="clearButton_Click"/>
         <Button Name="closeButton" Content="Cl_ose" HorizontalAlignment="Left" Height="34" Margin="327,264,0,0" VerticalAlignment="Top" Width="122" Click="closeButton_Click"/>
-        <Label Content="Total Charge after adding &#xA;the delivery charge ($25)" Width="150" HorizontalAlignment="left" VerticalAlignment="Bottom" Margin="50,0,0,85"/>
-        <Border BorderBrush="LightGray" BorderThickness="1" Width="100" Height="50" VerticalAlignment="Bottom" Margin="0,0,30,80">
+        <Label Content="Total Charge after adding &#xA;the delivery charge ($25)" Width="150" HorizontalAlignment="left" VerticalAlignment="Bottom" Margin="50,0,0,95"/>
+        <Border BorderBrush="LightGray" BorderThickness="1" Width="100" Height="20" VerticalAlignment="Bottom" Margin="0,0,30,110">
             <TextBlock Name="totalChargeTextBox" 
                HorizontalAlignment="Center" 
                VerticalAlignment="Center" 
                FontSize="16" 
                FontWeight="Bold"/>
         </Border>
-        <Label Content="Total Charge after adding &#xA;the wrap charge ($5)" Width="150" HorizontalAlignment="left" VerticalAlignment="Bottom" Margin="50,0,0,35"/>
-        <Border BorderBrush="LightGray" BorderThickness="1" Width="100" Height="50" VerticalAlignment="Bottom" Margin="0,0,30,25">
+        <Label Content="Total Charge after adding &#xA;the wrap charge ($5)" Width="150" HorizontalAlignment="left" VerticalAlignment="Bottom" Margin="50,0,0,50"/>
+        <Border BorderBrush="LightGray" BorderThickness="1" Width="100" Height="20" VerticalAlignment="Bottom" Margin="0,0,30,55">
             <TextBlock Name="totalChargeAfterWrapTextBox" 
+               HorizontalAlignment="Center" 
+               VerticalAlignment="Center" 
+               FontSize="16" 
+               FontWeight="Bold"/>
+        </Border>
+        <Label Content="Total Charge After GST @ 10%" Width="150" HorizontalAlignment="left" VerticalAlignment="Bottom" Margin="50,0,0,15"/>
+        <Border BorderBrush="LightGray" BorderThickness="1" Width="100" Height="20" VerticalAlignment="Bottom" Margin="0,0,30,15">
+            <TextBlock Name="totalChargeAfterGSTTextBox" 
                HorizontalAlignment="Center" 
                VerticalAlignment="Center" 
                FontSize="16" 
